--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
@@ -1,40 +1,120 @@
-﻿@model SocialMegazord2._0.Models.ChangePasswordViewModel
+﻿@using Microsoft.AspNet.Identity;
+@model SocialMegazord2._0.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
+@*<!DOCTYPE html>*@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    <title>Change Password</title>
+</head>
 
-<h2>@ViewBag.Title.</h2>
+<body>
+    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
+    {
+        @Html.AntiForgeryToken()
+        <div id="profile_div">
+            <ul class="profile-wrapper">
+                <li>
+                    <div class="profile">
+                        @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
+                        <ul class="menu">
+                            <li>
+                                <a id="page_settings" href="#">My Profile</a>
+                                <div class="horizontal_menu">
+                                    <ul>
+                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
+                                        <li>@Html.ActionLink("My Events", "Events", "Manage", new { area = "", value = "My Events" })</li>
+                                        <li>@Html.ActionLink("My Videos", "Videos", "Manage", new { area = "", value = "My Videos" })</li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <a id="page_settings" href="#">Settings</a>
+                                <div class="horizontal_menu" hidden>
+                                    <ul>
+                                        <li>@Html.ActionLink("Change Password", "Change Password", "Manage", new { area = "" })</li>
+                                        <li>@Html.ActionLink("Change Username", "Change Username", "Manage", new { area = "" })</li>
+                                    </ul>
+                                </div>
+                            </li>
+                            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post))
+                            {
+                                <li><a href="javascript:document.getElementById('profile_div').submit()">Log Off</a></li>
+                            }
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    }
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-        </div>
+    <div id="contents">
+        @Html.ActionLink(" ", "Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
+        @Html.ActionLink(" ", "Science", "Comunities", null, new { @id = "button3", @class = "button button3" })
+        @Html.ActionLink(" ", "MutualHelp", "Comunities", null, new { @id = "button2", @class = "button button2" })
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
+
+    <div id="navMyProfile">
+        <style>
+            .navUL {
+                margin-left: 33%;
+                margin-right: 38.9%;
+            }
+        </style>
+        <ul class="navUL">
+            <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
+            <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
+            <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+        </ul>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
-        </div>
-    </div>
+
+    <div>
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "formEvent" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div>
+                @*<label class="lable">Current Password: </label>*@
+                @Html.LabelFor(m => m.OldPassword, new { @class = "lable", @value = "Current Password:" })
+                @*<input type="password" class="content2" placeholder="">*@
+                @Html.TextBoxFor(m => m.OldPassword, new { @class = "content2", @type = "password", @placeholder = "" })
+            </div>
+            <br>
+            <div>
+                @*<label class="lable">New Password: </label>*@
+                @Html.LabelFor(m => m.NewPassword, new { @class = "lable", @value = "New Password:" })
+                @*<input type="password" placeholder="">*@
+                @Html.TextBoxFor(m => m.NewPassword, new { @type = "password", @placeholder = "" })
+            </div>
+            <br>
+            <div>
+                @*<label class="lable">Repeat Password: </label>*@
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "lable", @value = "Confirm Password:" })
+                @*<input type="password" placeholder="">*@
+                @Html.TextBoxFor(m => m.ConfirmPassword, new { @type = "password", @placeholder = "" })
+            </div>
+            <br>
+            <div>
+
+                <button type="button" class="submitButtons">Cancel</button>
+
+                <button class="submitButtons" type="submit">Update</button>
+            </div>
+        }
+
+        <script src="scripts/backgroundChange.js"></script>
+
+
+        <footer>
+            <div class="the_footer2">
+                <h3>© 2016 - SocialMegazord inc.</h3>
+            </div>
+        </footer>
+</body>
+</html>
 }
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
