--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ManageLogins.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ManageLogins.cshtml
@@ -1,70 +1,113 @@
-﻿@model SocialMegazord2._0.Models.ManageLoginsViewModel
-@using Microsoft.Owin.Security
+﻿@using Microsoft.AspNet.Identity;
+@model SocialMegazord2._0.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Manage your external logins";
+    ViewBag.Title = "Change Password";
 }
+@*<!DOCTYPE html>*@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    <title>Change Password</title>
+</head>
 
-<h2>@ViewBag.Title.</h2>
-
-<p class="text-success">@ViewBag.StatusMessage</p>
-@{
-    var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
-        <div>
-            <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-            </p>
+<body>
+    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
+    {
+        @Html.AntiForgeryToken()
+        <div id="profile_div">
+            <ul class="profile-wrapper">
+                <li>
+                    <div class="profile">
+                        @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
+                        <ul class="menu">
+                            <li>
+                                <a id="page_settings" href="#">My Profile</a>
+                                <div class="horizontal_menu">
+                                    <ul>
+                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
+                                        <li>@Html.ActionLink("My Events", "Events", "Manage", new { area = "", value = "My Events" })</li>
+                                        <li>@Html.ActionLink("My Videos", "Videos", "Manage", new { area = "", value = "My Videos" })</li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <a id="page_settings" href="#">Settings</a>
+                                <div class="horizontal_menu" hidden>
+                                    <ul>
+                                        <li>@Html.ActionLink("Change Password", "Change Password", "Manage", new { area = "" })</li>
+                                        <li>@Html.ActionLink("Change Username", "Change Username", "Manage", new { area = "" })</li>
+                                    </ul>
+                                </div>
+                            </li>
+                            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post))
+                            {
+                                <li><a href="javascript:document.getElementById('profile_div').submit()">Log Off</a></li>
+                            }
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
     }
-    else
-    {
-        if (Model.CurrentLogins.Count > 0)
-        {
-            <h4>Registered Logins</h4>
-            <table class="table">
-                <tbody>
-                    @foreach (var account in Model.CurrentLogins)
-                    {
-                        <tr>
-                            <td>@account.LoginProvider</td>
-                            <td>
-                                @if (ViewBag.ShowRemoveButton)
-                                {
-                                    using (Html.BeginForm("RemoveLogin", "Manage"))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <div>
-                                            @Html.Hidden("loginProvider", account.LoginProvider)
-                                            @Html.Hidden("providerKey", account.ProviderKey)
-                                            <input type="submit" class="btn btn-default" value="Remove" title="Remove this @account.LoginProvider login from your account" />
-                                        </div>
-                                    }
-                                }
-                                else
-                                {
-                                    @: &nbsp;
-                                }
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
-        if (Model.OtherLogins.Count > 0)
-        {
-            using (Html.BeginForm("LinkLogin", "Manage"))
-            {
-                @Html.AntiForgeryToken()
-                <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in Model.OtherLogins)
-                    {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
-                    }
-                </p>
-                </div>
+
+    <div id="contents">
+        @Html.ActionLink(" ", "Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
+        @Html.ActionLink(" ", "Science", "Comunities", null, new { @id = "button3", @class = "button button3" })
+        @Html.ActionLink(" ", "MutualHelp", "Comunities", null, new { @id = "button2", @class = "button button2" })
+    </div>
+
+    <div id="navMyProfile">
+        <style>
+            .navUL {
+                margin-left: 33%;
+                margin-right: 38.9%;
             }
+        </style>
+        <ul class="navUL">
+            <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
+            <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
+            <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+        </ul>
+    </div>
+
+    <div>
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "formEvent" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div>
+                @Html.LabelFor(m => m.OldPassword, new { @class = "lable", @value = "Current Password:" })
+                @Html.TextBoxFor(m => m.OldPassword, new { @class = "content2", @type = "password", @placeholder = "" })
+            </div>
+            <br>
+            <div>
+                @Html.LabelFor(m => m.NewPassword, new { @class = "lable", @value = "New Password:" })
+                @Html.TextBoxFor(m => m.NewPassword, new { @type = "password", @placeholder = "" })
+            </div>
+            <br>
+            <div>
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "lable", @value = "Confirm Password:" })
+                @Html.TextBoxFor(m => m.ConfirmPassword, new { @type = "password", @placeholder = "" })
+            </div>
+            <br>
+            <div>
+
+                <button type="button" class="submitButtons">Cancel</button>
+
+                <button class="submitButtons" type="submit">Update</button>
+            </div>
         }
-    }
+
+        <script src="scripts/backgroundChange.js"></script>
+
+
+        <footer>
+            <div class="the_footer2">
+                <h3>© 2016 - SocialMegazord inc.</h3>
+            </div>
+        </footer>
+</body>
+</html>
 }
