--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                                 <a id="page_settings" href="#">Settings</a>
                                 <div class="horizontal_menu" hidden>
                                     <ul>
-                                        <li>@Html.ActionLink("Change Password", "Manage", "ChangePassword")</li>
+                                        <li>@Html.ActionLink("Change Password", "ChangePassword", "Manage")</li>
                                         <li>@Html.ActionLink("Change Username", "Change Username", "Manage", new { area = "" })</li>
                                     </ul>
                                 </div>
